// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="MuiList-root"
      role="menu"
      tabindex="-1"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="MenuItem-stringContent"
        >
          Item 1
        </span>
      </li>
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="MenuItem-stringContent"
        >
          Item 2
        </span>
      </li>
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="MenuItem-stringContent"
        >
          Item 3
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu has back button when in submenu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <ul
        class="MuiList-root"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="Menu-backButtonIcon"
          >
            <svg
              class="SvgBackMinor16-root"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <defs>
                <path
                  d="M6.207 7.5l4 4-.707.707-4-4-.707-.707L9.5 2.793l.707.707-4 4z"
                  id="backMinor16_svg__a"
                />
              </defs>
              <g
                fill-rule="evenodd"
              >
                <mask
                  id="backMinor16_svg__b"
                >
                  <use
                    xlink:href="#backMinor16_svg__a"
                  />
                </mask>
                <use
                  fill-rule="nonzero"
                  xlink:href="#backMinor16_svg__a"
                />
                <g
                  mask="url(#backMinor16_svg__b)"
                >
                  <path
                    d="M0 0h16v16H0z"
                  />
                </g>
              </g>
            </svg>
          </span>
          <p
            class="MuiTypography-root Typography-bodySmall Typography-grey MuiTypography-body1"
          >
            Back
          </p>
        </li>
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          role="menuitem"
          tabindex="-1"
        >
          <p
            class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
          >
            Submenu Item
          </p>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
